# kdiff

./: .gitignore  Dockerfile  README.md  artifacthub-repo.yml  index.yaml  kdiff-snapshots.argocd-app.yaml  p.excalidraw  pyproject.toml
.github/workflows/: docker-publish.yaml  helm-package-publish.yaml
.kube-env/: README.md
kdiff-cli/: README.md  cli.README.md  cli.py  helpers.py  main.py  pyproject.toml
kdiff-snapshots/: ANY-csv-script.sh  ANY-kdiff-snapshots-entrypoint.sh  Dockerfile  README.md  create-s3-bucket-and-iam-user.sh  csv-script.sh  entrypoint.sh  healthcheck.sh  install-qsv.sh  kdiff-entrypoint.sh  kdiff-snapshots-entrypoint.sh  snapshot-config.yaml  snapshots.README.md  start-and-wait-steampipe-service.sh
kdiff-snapshots/helm-chart/: .helmignore  Chart.yaml  README.md  values.yaml
kdiff-snapshots/helm-chart/templates/: NOTES.txt  _helpers.tpl  _helpers_cli.tpl  aws-irsa-s3-access-role.yaml  cm-env-vars.yaml  config.yaml  cronjob.yaml  deployment.yaml  deployments.yaml  env-vars-cm.yaml  extra-objects.yaml  filegator-ingress.yaml  filegator-service.yaml  hpa.yaml  ingress.yaml  initdb-sql-cm.yaml  read-only-role.yaml  read-only-sa.yaml  secret-credentials.yaml  (+4 more)
local-runtime/: README.md
qsv-testing/: README.md
snapshot-maker/: README.md
ui/: README.md  abt_s3_fs.py  config.py  config.yaml  diff_csv.py  mainpage.py  misc.py  pyproject.toml  s3_and_local_files.py  schema_types.py  storage.py  streamlit_app.py  take_a_diff.py
ui/pages/: diff-multi-context.py  mainpage.py  multi-context.py  queryparam.py  snapshot_list.py  take_a_diff.py
(+1 files in other folders)
