[project]
name = "kdiff-cli"
version = "0.0.1"
description = "CLI tool for comparing Kubernetes backup snapshots"
readme = "README.md"
dependencies = [
    "typer",
    "pandas",
    "openpyxl",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kdiff-cli"] 