[project]
name = "ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.64",
    "numpy",
    "pandas",
    "python-dotenv>=1.2.1",
    "s3fs>=0.4.2",
    "st-files-connection>=0.1.0",
    "streamlit",
    "watchdog>=6.0.0",
]
